# AShop

./: .gitignore  README.md  manage.py  pyproject.toml
django-postgres/ShopArita/: manage.py
django-postgres/ShopArita/Aritashop/: apps.py
django-postgres/ShopArita/ShopArita/: asgi.py  settings.py  urls.py  wsgi.py
django-postgres/env/: pyvenv.cfg
django-postgres/env/Scripts/: activate  activate.bat
home/: views.py
home/templates/home/: home.html
orders/: models.py  urls.py  views.py
products/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
products/templates/: index.html  product.html
shoparita/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
templates/: base.html
